--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    env:
+      DB_HOST: postgres
+      DB_USER: testuser
+      DB_PASS: testpassword
+      DB_NAME: testdb
+      
     services:
       postgres:
         image: postgres:13-alpine
@@ -30,8 +35,7 @@ jobs:
           --health-retries 5
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
@@ -42,9 +46,10 @@ jobs:
       run: docker build -f Dockerfile.test -t myapp/test .
 
     - name: Run the Docker container to execute tests
-      run: docker run --network host myapp/test
+      run: docker run --network="host" myapp/test
       env:
-        DB_HOST: localhost
+        DB_HOST: postgres  # Use the service name as the host
         DB_USER: testuser
         DB_PASS: testpassword
         DB_NAME: testdb
+
