--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,10 +46,11 @@ jobs:
       run: docker build -f Dockerfile.test -t myapp/test .
 
     - name: Run the Docker container to execute tests
-      run: docker run --network="host" myapp/test
-      env:
-        DB_HOST: postgres  # Use the service name as the host
-        DB_USER: testuser
-        DB_PASS: testpassword
-        DB_NAME: testdb
-
+      run: |
+        docker run \
+        -e DB_HOST=${{ env.DB_HOST }} \
+        -e DB_USER=${{ env.DB_USER }} \
+        -e DB_PASS=${{ env.DB_PASS }} \
+        -e DB_NAME=${{ env.DB_NAME }} \
+        --network="host" \
+        myapp/test
