--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      DB_HOST: postgres
+      DB_HOST: localhost
       DB_USER: testuser
       DB_PASS: testpassword
       DB_NAME: testdb
